--- a/Stop-Watch/index.html
+++ b/Stop-Watch/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="./src/assets/icon.png" /> <!--shoutout to the owner of the icon whoever he is. it is not mine.-->
+    <link rel="icon" type="image/png" href="./src/assets/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Create Context Practice</title>
+    <title>Stop Watch</title>
   </head>
   <body>
     <div id="root"></div>
